--- a/BtcMarkets/BtcMarkets.Wallet/Views/MarketTradesPage.xaml
+++ b/BtcMarkets/BtcMarkets.Wallet/Views/MarketTradesPage.xaml
@@ -3,10 +3,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              Title="{Binding Title}"
              Style="{StaticResource DefaultPage}" 
-              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
-    ios:Page.UseSafeArea="true" 
+              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
+             xmlns:views="clr-namespace:BtcMarkets.Wallet.Views"
+             ios:Page.UseSafeArea="true" 
              x:Name="TradeOrdersPage" 
              x:Class="BtcMarkets.Wallet.Views.MarketTradesPage">
+    <Shell.TitleView>
+        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand"  Spacing="10">
+            <views:AccountHoldingsView  HorizontalOptions="FillAndExpand"></views:AccountHoldingsView>
+            <StackLayout  Orientation="Horizontal" HorizontalOptions="EndAndExpand">
+                <StackLayout>
+
+                </StackLayout>
+                <Image Source="{Binding Converter={StaticResource FontIconImage},ConverterParameter=refresh}">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding BindingContext.RefreshDataCommand, Source={x:Reference TradeOrdersPage}}"></TapGestureRecognizer>
+                    </Image.GestureRecognizers>
+                </Image>
+            </StackLayout>
+        </StackLayout>
+    </Shell.TitleView>
     <ContentPage.Content>
 
         <ScrollView Style="{StaticResource PageScroll}">
