--- a/BtcMarkets/BtcMarkets.Wallet/Views/MarketsPage.xaml
+++ b/BtcMarkets/BtcMarkets.Wallet/Views/MarketsPage.xaml
@@ -1,20 +1,37 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-        
-             xmlns:controls="clr-namespace:Refractored.XamForms.PullToRefresh;assembly=Refractored.XamForms.PullToRefresh"
-             x:Name="marketView"
-             Style="{StaticResource DefaultView}"
-             x:Class="BtcMarkets.Wallet.Views.MarketsView" >
-   
-    <ContentView.Content>
-
+             xmlns:controls="clr-namespace:BtcMarkets.Wallet.Controls"
+                Title="{Binding Title}"
+             Style="{StaticResource DefaultPage}" 
+               xmlns:lib ="clr-namespace:BtcMarkets.Wallet"
+              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
+             xmlns:views="clr-namespace:BtcMarkets.Wallet.Views"
+             ios:Page.UseSafeArea="true" 
+             x:Name="MarketsListPage" 
+             x:Class="BtcMarkets.Wallet.Views.MarketsPage">
+    <Shell.TitleView>
+        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand"  Spacing="10">
+            <views:AccountHoldingsView  HorizontalOptions="FillAndExpand"></views:AccountHoldingsView>
+            <StackLayout  Orientation="Horizontal" HorizontalOptions="EndAndExpand">
+                <StackLayout>
+                    <!--<Label Text="brightness_1" Style="{Binding Source={x:Static lib:AppData.Current},Path=LiveDataAvailable, Converter={StaticResource ToggleTextStyle}, ConverterParameter=MediumIconTextSuccess|MediumIconTextError}" FontFamily="{StaticResource MaterialDesign}"></Label>-->
+                </StackLayout>
+                    <Image Source="{Binding Converter={StaticResource FontIconImage},ConverterParameter=refresh}">
+                        <Image.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding BindingContext.RefreshDataCommand, Source={x:Reference MarketsListPage}}"></TapGestureRecognizer>
+                        </Image.GestureRecognizers>
+                    </Image>
+                </StackLayout>
+        </StackLayout>
+    </Shell.TitleView>
+    <ContentPage.Content>
         <Grid Style="{StaticResource DefaultGrid}" RowSpacing="0">
-            <Grid.Margin>
+            <!--<Grid.Margin>
                 <OnPlatform x:TypeArguments="Thickness">
-                    <On Platform="iOS" Value="0,35,0,0" />
+                    <On Platform="iOS" Value="0,5,0,0" />
                 </OnPlatform>
-            </Grid.Margin>
+            </Grid.Margin>-->
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
@@ -45,9 +62,9 @@
                 <Label Grid.Column="2" Grid.Row="0"  
                                Text="Holdings" 
                                Style="{StaticResource SmallHeaderText}"/>
-                <Image Grid.Column="3" Grid.Row="0" Source="{Binding Converter={StaticResource FontIconImage},ConverterParameter=search}" HeightRequest="20" WidthRequest="20"> 
+                <Image Grid.Column="3" Grid.Row="0" Source="{Binding Converter={StaticResource FontIconImage},ConverterParameter=search}" HeightRequest="20" WidthRequest="20">
                     <Image.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding BindingContext.ShowSearchCommand, Source={x:Reference marketView}}"></TapGestureRecognizer>
+                        <TapGestureRecognizer Command="{Binding BindingContext.ShowSearchCommand, Source={x:Reference MarketsListPage}}"></TapGestureRecognizer>
                     </Image.GestureRecognizers>
                 </Image>
 
@@ -55,39 +72,55 @@
                     <SearchBar x:Name="SearchCoin"  Margin="0" IsVisible="{Binding IsSearchBarVisible}" Style="{StaticResource SearchCoin}" TextChanged="SearchCoin_TextChanged" SearchButtonPressed="SearchCoin_SearchButtonPressed"/>
                 </Grid>
             </Grid>
-          
-            <!--<ScrollView  Grid.Row="1" Grid.Column="0" VerticalOptions="FillAndExpand"    HorizontalOptions="StartAndExpand">-->
 
-
-            <!--<controls:PullToRefreshLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"  
-                                          RefreshColor="{StaticResource PrimaryColor}"  RefreshCommand="{Binding RefreshCommand}" IsRefreshing="{Binding IsRefreshing}"
-                                           Grid.Row="1" Grid.Column="0" IsPullToRefreshEnabled="True" >-->
+            <!--SelectedItem="{Binding SelectedMarket, Mode=TwoWay}"  ItemSelected="MarketsListView_ItemSelected"  IsPullToRefreshEnabled="True" RefreshCommand="{Binding RefreshDataCommand}" IsRefreshing="{Binding IsRefreshing}"
+                                SelectionMode="Single"   IsPullToRefreshEnabled="True" RefreshCommand="{Binding RefreshCommand}" IsRefreshing="{Binding IsRefreshing}"-->
             <StackLayout Grid.Row="2" Grid.Column="0" Spacing="0" >
-                <!--<ActivityIndicator IsVisible="{Binding IsBusy}" IsRunning="{Binding IsBusy}"></ActivityIndicator>-->
-                <ListView  x:Name="marketsListView" Style="{StaticResource MarketList}" ItemsSource="{Binding Markets}"  SelectedItem="{Binding SelectedMarket, Mode=TwoWay}" 
-                                SelectionMode="Single"   IsPullToRefreshEnabled="True" RefreshCommand="{Binding RefreshCommand}" IsRefreshing="{Binding IsRefreshing}" SeparatorColor="{StaticResource SeparatorColor}" 
-                     HasUnevenRows="True"  ItemSelected="MarketsListView_ItemSelected" CachingStrategy="RecycleElement">
+             
+                <ListView  x:Name="marketsListView" Style="{StaticResource MarketList}" ItemsSource="{Binding GroupedMarkets}"  SeparatorColor="{StaticResource SeparatorColor}" 
+                     HasUnevenRows="True"     IsGroupingEnabled="True"  ItemSelected="MarketsListView_ItemSelected" SelectionMode="Single"  
+                           SelectedItem="{Binding SelectedMarket, Mode=TwoWay}">
 
-                    <!-- SelectionChangedCommand="{Binding BindingContext.SelectionChangedCommand, Source={x:Reference marketsListView}}" -->
-                 
+                    <ListView.GroupHeaderTemplate>
+                        <DataTemplate>
+                            <ViewCell Height="30"  >
+                               
+                                <StackLayout Padding="5,0,5,0" Orientation="Horizontal" HeightRequest="20" BackgroundColor="{DynamicResource PrimaryColor}" HorizontalOptions="FillAndExpand">
+                                    <StackLayout.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding BindingContext.ExpandGroupCommand, Source={x:Reference MarketsListPage}}" CommandParameter="{Binding Key}" ></TapGestureRecognizer>
+                                    </StackLayout.GestureRecognizers>
+
+                                    <Label    FontAttributes="Bold" VerticalTextAlignment="Center" VerticalOptions="CenterAndExpand">
+                                        <Label.FormattedText>
+                                            <FormattedString>
+                                                <Span Text="{Binding Key.Name}" Style="{StaticResource SmallDefaultText}"/>
+                                                <Span Text="{Binding Key.HelpText}" Style="{StaticResource MicroDefaultText}"/>
+                                            </FormattedString>
+                                        </Label.FormattedText>
+                                    </Label>
+                                    <Image  HeightRequest="20" WidthRequest="20" HorizontalOptions="EndAndExpand" Source="{Binding Key.ExpandIcon, Converter={StaticResource ToggleImage}}"  Style="{StaticResource MarketListFavouriteImage}">
+                                    </Image>
+                                </StackLayout>
+
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.GroupHeaderTemplate>
+                    
                     <ListView.ItemTemplate  >
                         <DataTemplate>
                             <ViewCell>
 
-                                <!--<StackLayout BindableLayout.ItemsSource="{Binding Markets}" x:Name="marketsListView" Spacing="1">
-                    <BindableLayout.ItemTemplate>
-                        <DataTemplate>-->
-                                <Grid  Style="{StaticResource MarketListTemplate}" HorizontalOptions="Fill" VerticalOptions="Fill" BindingContextChanged="Grid_BindingContextChanged">
+                                <controls:CustomGrid  Style="{StaticResource MarketListTemplate}" HorizontalOptions="Fill" VerticalOptions="Fill">
 
-                                    <Grid.RowDefinitions>
+                                    <controls:CustomGrid.RowDefinitions>
                                         <RowDefinition Height="Auto" />
-                                    </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
+                                    </controls:CustomGrid.RowDefinitions>
+                                    <controls:CustomGrid.ColumnDefinitions>
                                         <ColumnDefinition Width="35*" />
                                         <ColumnDefinition Width="30*" />
                                         <ColumnDefinition Width="30*" />
                                         <ColumnDefinition Width="10*" />
-                                    </Grid.ColumnDefinitions>
+                                    </controls:CustomGrid.ColumnDefinitions>
 
                                     <StackLayout Grid.Column="0" Grid.Row="0" Orientation="Horizontal" >
                                         <Frame Style="{StaticResource MarketListFrame}">
@@ -101,9 +134,9 @@
                                                 </Image.VerticalOptions>
                                             </Image>
                                         </Frame>
-                                        <StackLayout Spacing="0" Padding="0">
-                                            <Label Text="{Binding Instrument}"  Style="{StaticResource MarketListInstrumentCode}"/>
-                                            <Label  Style="{StaticResource MicroDefaultText}">
+                                        <StackLayout Spacing="0" Padding="0" HorizontalOptions="FillAndExpand">
+                                            <Label Text="{Binding Instrument}"  Style="{StaticResource MarketListInstrumentCode}" HorizontalOptions="FillAndExpand"/>
+                                            <Label  Style="{StaticResource MicroDefaultText}" HorizontalOptions="FillAndExpand">
                                                 <Label.FormattedText>
                                                     <FormattedString>
                                                         <Span Text="("></Span>
@@ -128,7 +161,7 @@
                                             <Label.FormattedText>
                                                 <FormattedString>
                                                     <Span Text="V(24H) "  Style="{StaticResource MarketListVolumeLabel}"></Span>
-                                                    <Span Text="{Binding Volume}" Style="{StaticResource MarketListVolumeValue}"></Span>
+                                                    <Span Text="{Binding VolumeString}" Style="{StaticResource MarketListVolumeValue}"></Span>
                                                 </FormattedString>
                                             </Label.FormattedText>
                                         </Label>
@@ -142,11 +175,11 @@
                                         </Label.FormattedText>
                                     </Label>
 
-                                    <Grid Grid.Column="3" Grid.Row="0"   >
-                                        <Grid.RowDefinitions>
+                                    <controls:CustomGrid Grid.Column="3" Grid.Row="0"   >
+                                        <controls:CustomGrid.RowDefinitions>
                                             <RowDefinition Height="Auto"></RowDefinition>
                                             <RowDefinition Height="Auto"></RowDefinition>
-                                        </Grid.RowDefinitions>
+                                        </controls:CustomGrid.RowDefinitions>
                                         <Image Grid.Row="0" Grid.Column="0" Source="{Binding ToggleStarred, Converter={StaticResource ToggleImage}}"  Style="{StaticResource MarketListFavouriteImage}">
                                             <Image.GestureRecognizers>
                                                 <TapGestureRecognizer Command="{Binding BindingContext.FavouriteCommand, Source={x:Reference marketsListView}}" CommandParameter="{Binding .}" ></TapGestureRecognizer>
@@ -158,24 +191,9 @@
                                             </Image.GestureRecognizers>
                                         </Image>
 
-                                    </Grid>
-                                    <!--<StackLayout Grid.Column="3" Grid.Row="0">
-                                        <Label Text="{Binding ToggleStarred, Converter={StaticResource ToggleTextIcon}}"  Style="{DynamicResource MarketListFavouriteIcon}">
-                                            <Label.GestureRecognizers>
-                                                <TapGestureRecognizer Command="{Binding BindingContext.FavouriteCommand, Source={x:Reference marketsListView}}" CommandParameter="{Binding .}" ></TapGestureRecognizer>
-                                            </Label.GestureRecognizers>
-                                        </Label>
-                                        <Label Text="{Binding ToggleNotification, Converter={StaticResource ToggleTextIcon}}" Style="{DynamicResource MarketListNotificationIcon}">
-                                            <Label.GestureRecognizers>
-                                                <TapGestureRecognizer Command="{Binding BindingContext.NotificationCommand, Source={x:Reference marketsListView}}"  CommandParameter="{Binding .}" ></TapGestureRecognizer>
-                                            </Label.GestureRecognizers>
-                                        </Label>
-                                    </StackLayout>-->
-                                </Grid>
-
-                                <!--<BoxView Grid.Column="0" Grid.Row="1" Style="{StaticResource Seperator1}">
-
-                                </BoxView>-->
+                                    </controls:CustomGrid>
+                                 
+                                </controls:CustomGrid>
 
                             </ViewCell>
                         </DataTemplate>
@@ -183,13 +201,9 @@
                     </ListView.ItemTemplate>
                 </ListView>
             </StackLayout>
-            <!--</StackLayout>-->
-            <!--</DataTemplate>
-                    </BindableLayout.ItemTemplate>
-                </StackLayout>
-            </ScrollView>-->
-            <!--</controls:PullToRefreshLayout>-->
+      
         </Grid>
 
-    </ContentView.Content>
-</ContentView>
+      
+    </ContentPage.Content>
+</ContentPage>
