--- a/BtcMarkets/BtcMarkets.Wallet/Views/OpenOrdersPage.xaml
+++ b/BtcMarkets/BtcMarkets.Wallet/Views/OpenOrdersPage.xaml
@@ -1,13 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Name="TradeOrdersPage"
+            
              Style="{StaticResource DefaultPage}"
-              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
-                ios:Page.UseSafeArea="true" 
-             
+              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
+             xmlns:views="clr-namespace:BtcMarkets.Wallet.Views"
+             ios:Page.UseSafeArea="true" 
+             x:Name="OpenOrdersListPage"
              x:Class="BtcMarkets.Wallet.Views.OpenOrdersPage">
-
+    <Shell.TitleView>
+        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand"  Spacing="10">
+            <views:AccountHoldingsView  HorizontalOptions="FillAndExpand"></views:AccountHoldingsView>
+            <StackLayout  Orientation="Horizontal" HorizontalOptions="EndAndExpand">
+                <StackLayout>
+          
+                </StackLayout>
+                <Image Source="{Binding Converter={StaticResource FontIconImage},ConverterParameter=refresh}">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding BindingContext.RefreshDataCommand, Source={x:Reference OpenOrdersListPage}}"></TapGestureRecognizer>
+                    </Image.GestureRecognizers>
+                </Image>
+            </StackLayout>
+        </StackLayout>
+    </Shell.TitleView>
     <ContentPage.Content>
 
         <Grid Style="{StaticResource DefaultGrid}" RowSpacing="0">
@@ -49,7 +64,7 @@
                         <DataTemplate>
                             <ViewCell Height="25">
 
-                                <StackLayout Padding="5,0,5,0" Orientation="Horizontal" HeightRequest="20" BackgroundColor="{DynamicResource AccentColor}" HorizontalOptions="FillAndExpand">
+                                <StackLayout Padding="5,0,5,0" Orientation="Horizontal" HeightRequest="20" BackgroundColor="{DynamicResource PrimaryColor}" HorizontalOptions="FillAndExpand">
                                     <Label  Text="{Binding Key}" Style="{StaticResource SmallDefaultText}" FontAttributes="Bold" VerticalTextAlignment="Center" VerticalOptions="CenterAndExpand"></Label>
 
                                 </StackLayout>
